[gd_scene load_steps=7 format=3 uid="uid://dl37f3tko800v"]

[ext_resource type="Script" uid="uid://bkxtr55rsm8fo" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="PackedScene" uid="uid://cdh1sg08d5uhl" path="res://scenes/slot.tscn" id="2_qhqgy"]
[ext_resource type="Resource" uid="uid://cuvol23vwoho1" path="res://resources/Weapons/magic_wand.tres" id="3_dqkch"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_g2els"]
size = Vector2(20, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3vyb7")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Weapons" type="HBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Slot" parent="UI/Weapons" instance=ExtResource("2_qhqgy")]
layout_mode = 2
weapon = ExtResource("3_dqkch")

[node name="Slot2" parent="UI/Weapons" instance=ExtResource("2_qhqgy")]
layout_mode = 2

[node name="Slot3" parent="UI/Weapons" instance=ExtResource("2_qhqgy")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qhqgy")

[node name="SelfDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="SelfDamageBox" type="CollisionShape2D" parent="SelfDamage"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_3vyb7")

[node name="Health" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -25.0
offset_top = -37.0
offset_right = 26.0
offset_bottom = -10.0
value = 100.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="body_entered" from="SelfDamage" to="." method="_on_self_damage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
